@@ -76,11 +76,11 @@ static char const rcsid[] = "$Id$";   /* RCS ID for ident(1) */
  *	Link layer handle structure for DLPI.
  *	This is typedef'ed as link_t.
  */
-struct link_handle {
+typedef struct link_handle {
    int fd;
    int sap_first;
    struct ifreq ifr;
-};
+} link_t;
 
 #if defined(DLIOCRAW) || defined(HAVE_SYS_DLPIHDR_H)
 static int
@@ -164,7 +164,7 @@ dlpi_msg(int fd, union DL_primitives *dlp, int rlen, int flags, unsigned ack,
  *
  *	A pointer to a link handle structure.
  */
-link_t *
+static link_t *
 link_open(const char *device) {
    union DL_primitives *dlp;
    unsigned char buf[MAXDLBUF];
@@ -261,7 +261,7 @@ link_open(const char *device) {
  *
  *	None
  */
-void
+static void
 link_close(link_t *handle) {
    if (handle != NULL) {
       if (handle->fd >= 0) {
@@ -276,7 +276,7 @@ link_close(link_t *handle) {
  *                                 with the given device.
  *      Inputs:
  *
- *      handle		The link layer handle
+ *      if_name		The name of the network interface
  *      hw_address	(output) the Ethernet MAC address
  *
  *      Returns:
@@ -284,9 +284,12 @@ link_close(link_t *handle) {
  *      None
  */
 void
-get_hardware_address(link_t *handle, unsigned char hw_address[]) {
+get_hardware_address(const char *if_name, unsigned char hw_address[]) {
    union DL_primitives *dlp;
    unsigned char buf[MAXDLBUF];
+   link_t *handle;
+
+   handle = link_open(if_name);
 
    dlp = (union DL_primitives*) buf;
    dlp->physaddr_req.dl_primitive = DL_PHYS_ADDR_REQ;
@@ -295,6 +298,8 @@ get_hardware_address(link_t *handle, unsigned char hw_address[]) {
                 DL_PHYS_ADDR_ACK_SIZE, sizeof(buf)) < 0) {
       err_msg("dlpi_msg failed");
    }
+
+   link_close(handle);
    memcpy(hw_address, buf + dlp->physaddr_ack.dl_addr_offset, ETH_ALEN);
 }
 
@@ -303,7 +308,7 @@ get_hardware_address(link_t *handle, unsigned char hw_address[]) {
  *
  *      Inputs:
  *
- *      handle		The link level handle
+ *      if_name		The name of the network interface
  *      ip_addr		(output) The IP Address associated with the device
  *
  *      Returns:
@@ -311,9 +316,12 @@ get_hardware_address(link_t *handle, unsigned char hw_address[]) {
  *      Zero on success, or -1 on failure.
  */
 int
-get_source_ip(link_t *handle, uint32_t *ip_addr) {
+get_source_ip(const char *if_name, uint32_t *ip_addr) {
    int fd;
    struct sockaddr_in sa_addr;
+   link_t *handle;
+
+   handle = link_open(if_name);
 
    if ((fd = socket(PF_INET, SOCK_DGRAM, 0)) < 0) {
       warn_sys("Socket");
@@ -325,6 +333,9 @@ get_source_ip(link_t *handle, uint32_t *ip_addr) {
       warn_sys("ioctl");
       return -1;
    }
+
+   link_close(handle);
+
    memcpy(&sa_addr, &(handle->ifr.ifr_ifru.ifru_addr), sizeof(sa_addr));
    *ip_addr = sa_addr.sin_addr.s_addr;
    close(fd);
